@@ -1,0 +1,9 @@
+        .section "data.relocs.01", "aw"
+        .dc.a   rel_01_01
+        .dc.a   rel_01_02
+        .dc.a   rel_01_03
+
+        .section "data.relocs.02", "aw"
+        .dc.a   rel_02_01
+        .dc.a   rel_02_02
+        .dc.a   rel_02_03
